--- a/demoblaze/pom.xml
+++ b/demoblaze/pom.xml
@@ -31,7 +31,13 @@
     <artifactId>testng</artifactId>
     <version>7.3.0</version>
     <scope>test</scope>
+</dependency><!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
 </dependency>
+
 
 <!-- https://mvnrepository.com/artifact/junit/junit -->
 <!--  <dependency>
